<resources>
    <string name="app_name">PocTech Inside</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="show_BS">Show BS</string>
    <string name="show_BS_smooth">Show smooth BS</string>
    <string name="show_Iw">Show Iw</string>
    <string name="show_Ib">Show Ib</string>
    <string name="smooth_Iw">Shooth Iw</string>
    <string name="smooth_Ib">Smooth Ib</string>
    <string name="show_K">Show K</string>
    <string name="show_Poc1">Show POC1</string>
    <string name="show_Poc2">Show POC2</string>

    <string name="menu_usage">How to use?</string>
    <string name="menu_usage_URL">https://docs.google.com/document/d/1M88kDUy6N58hsjnnrbO_jHU3tneItijSfNMNSMSHB3Q/edit?usp=sharing</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="override_Ib">Override Ib</string>
    <string name="value_Ib">Value for Ib</string>
    <string name="override_K">Override K</string>
    <string name="value_K">Value for K</string>
    <string name="smooth_value">Smooth degree</string>

    <string name="home_second">Home Second</string>
    <string name="sel_file">Choose file</string>
    <string name="auto_file">Auto-load the report (last)</string>
</resources>
